# activate-ray

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  workflow.yaml
docs/: CONFIGURATION.md  DEVELOPMENT.md
examples/: distributed_compute.py  gpu_workload.py  hello_ray.py
scripts/: setup.sh  setup_ray.sh  shutdown_ray.sh  start.sh  start_ray_cluster_pbs.sh  start_ray_cluster_slurm.sh  start_ray_head.sh  start_ray_worker.sh  submit_ray_job.sh  wait_for_ray.sh
tests/: __init__.py  conftest.py  test_integration.py  test_workflow_runner.py
tools/: ray_local.py  ray_submit.py  run_local.sh  run_tests.sh  workflow_runner.py
